# Module-5-Dekr-Strategy-Builder-Enhanced

./: .replit  app.py  database.py  debug_strategy.py  dekr_strategy_builder.db  financial_metrics_explanation.md  flask_app.py  main.py  models.py  pyproject.toml  replit.md  start_server.py  utils.py
attached_assets/: Module 5_ Dekr Strategy Builder Enhanced_1752693132541.md
routes/: __init__.py  signals.py  strategies.py  websocket.py
services/: __init__.py  ai_strategy_builder.py  backtesting.py  polygon_service.py  signal_generator.py  technical_analysis.py
static/css/: custom.css
static/js/: app.js
templates/: 404.html  backtesting.html  index.html  signals.html  strategy_builder.html
