[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "aiosqlite>=0.21.0",
    "asgiref>=3.9.1",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "routes>=2.5.1",
    "scikit-learn>=1.7.0",
    "ta>=0.11.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]
